@@ -1,6 +1,10 @@
 0.4.3:
-Sam Lantinga - Wed Apr  4 14:44:26 PDT 2001
- * Updated for SDL 1.2.0
+Sam Lantinga - Wed Apr  4 17:18:22 PDT 2001
+ * Updated for Simple DirectMedia Layer version 1.2.0
+Sam Lantinga - Wed Apr  4 17:18:14 PDT 2001
+ * Fixed audio stream detection in non-standard MPEG streams
+Sam Lantinga - Wed Apr  4 16:42:53 PDT 2001
+ * Fixed hang on rewind when stream header contains no timestamp
 Andreas Kloeckner - Wed Apr  4 14:43:49 PDT 2001
  * SMPEG now uses the SDL_RWops file abstraction internally
 Joe Drew - Wed Apr  4 13:40:44 PDT 2001
